input/cnpg-operator/manifests/sourced/Service_cnpg-webhook-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cnpg-operator
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/version: 1.25.1
  name: cnpg-webhook-service
  namespace: cnpg-system
spec:
  ports:
    - name: webhook-server
      port: 443
      targetPort: webhook-server
  selector:
    app.kubernetes.io/instance: cnpg-operator
    app.kubernetes.io/name: cloudnative-pg
  type: ClusterIP
