input/cnpg-operator/manifests/sourced/ValidatingWebhookConfiguration_cnpg-validating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: cnpg-operator
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/version: 1.25.1
  name: cnpg-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cnpg-webhook-service
        namespace: cnpg-system
        path: /validate-postgresql-cnpg-io-v1-backup
        port: 443
    failurePolicy: Fail
    name: vbackup.cnpg.io
    rules:
      - apiGroups:
          - postgresql.cnpg.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backups
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cnpg-webhook-service
        namespace: cnpg-system
        path: /validate-postgresql-cnpg-io-v1-cluster
        port: 443
    failurePolicy: Fail
    name: vcluster.cnpg.io
    rules:
      - apiGroups:
          - postgresql.cnpg.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusters
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cnpg-webhook-service
        namespace: cnpg-system
        path: /validate-postgresql-cnpg-io-v1-scheduledbackup
        port: 443
    failurePolicy: Fail
    name: vscheduledbackup.cnpg.io
    rules:
      - apiGroups:
          - postgresql.cnpg.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - scheduledbackups
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cnpg-webhook-service
        namespace: cnpg-system
        path: /validate-postgresql-cnpg-io-v1-pooler
        port: 443
    failurePolicy: Fail
    name: vpooler.cnpg.io
    rules:
      - apiGroups:
          - postgresql.cnpg.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - poolers
    sideEffects: None
